--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<section id="home">
 		<div class="meogi text-center">
 			<h6>"Terkadang Kita Perlu Berhalu Untuk Menjalani Hari Esok"</h6>
-            <h3>~ DullahXploit</h3>
+            <h3>~ RickyXploit</h3>
             </div>
           </section>
           
