--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
          	<div class="text-center">
          	<h3 class="sos about">Contack</h3>
          </div>
-         <a href="rickyabdullah851@gmail.com" target="_blank" class="bt btn btn-primary btn-sm"><i class="fab email"></i></a>
+         <a href="https://rickyabdullah851@gmail.com" target="_blank" class="bt btn btn-primary btn-sm"><i class="fab email"></i></a>
         </div>
        </div>
       </div>
