--- a/index.html
+++ b/index.html
@@ -89,10 +89,9 @@
          	<div class="text-center">
          	<h3 class="sos about">Contack</h3>
          </div>
-         <a href="https://www.facebook.com/kanna.cans12" target="_blank" class="bt btn btn-primary btn-sm"><i class="fab fa-facebook"></i></a>
+         <a href="https://www.facebook.com/ricky9991" target="_blank" class="bt btn btn-primary btn-sm"><i class="fab fa-facebook"></i></a>
          <a href="https://wa.me/6282349915082" target="_blank" class="bt btn btn-success btn-sm"><i class="fab fa-whatsapp"></i></a>
          <a href="https://github.com/rickyacode" target="_blank" class="bt btn btn-dark btn-sm"><i class="fab fa-github"></i></a>
-         <a href="https://www.instagram.com/dullahhill" target="_blank" class="bt btn btn-primary btn-sm"><i class="fab fa-instagram"></i></a>
        </div>
        </div>
       </div>
