--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                  </div>
           	<div class="card-body border-0">
           	<div class="text-center">
-          	<img data-aos="flip-left" data-aos-delay="500" class="profile" src="https://i.top4top.io/p_2135wiqee0.jpg" alt="Me">
+          	<img class="profile" src="https://i.top4top.io/p_2135wiqee0.jpg" alt="Me">
           <h6 data-aos="fade-in" data-aos-delay="500" class="name">Ricky Abdullah</h6>
           <hr class="my-3">
          <div class="mt-4 mb-4 text-center">
